--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+    <header>
+        WELCOME to MR.DEE's BLOG!
+    </header>
+</body>
+</html>
