--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mr.DEE's BLOG</title>
+    <script src="main.js" defer></script>
+    <link href="main.css" rel="stylesheet">
 </head>
+
 <body>
     <header>
         WELCOME to MR.DEE's BLOG!
     </header>
 </body>
+
 </html>
