--- a/index.html
+++ b/index.html
@@ -11,8 +11,45 @@
 
 <body>
     <header>
-        WELCOME to MR.DEE's BLOG!
+        WELCOME TO MR.DEE's BLOG!
     </header>
+    <p id="introduction">
+
+        <strong>Welcome to My Journey!</strong><br>
+        <br>
+
+        Hello, and welcome to my little corner of the internet! I'm a passionate chemist from the beautiful country of
+        Papua New Guinea, and I've created this blog to share my journey, interests, and aspirations with you.
+        <br>
+        <br> <em><u>About Me</u></em><br>
+        I recently graduated with a degree in Chemistry and am currently on the lookout for job opportunities. While I
+        navigate this exciting yet challenging phase of my life, I've decided to document my experiences, hobbies, and
+        ideas here.<br><br>
+    <ul><strong>What You'll Find Here</strong><br>
+    <br><li><em>Daily Life:</em> Join me as I share the ups and downs of my daily adventures, from the mundane to the extraordinary.
+    </li>
+    <li><em>Hobbies:</em> Discover my passions, from DIY projects to exploring the wonders of chemistry in everyday life.</li>
+    <li><em>Community Initiatives:</em> I'm deeply committed to helping the youth and supporting unfortunate families, women, and
+        children in our communities. Here, I'll share my plans, progress, and how you can get involved.</li>
+    <li><em>DIY Projects:</em> I love getting hands-on with creative projects. Whether it's crafting, building, or experimenting,
+        I'll guide you through my DIY endeavors.</li>
+    <li><em>Personal Growth:</em> As I work towards my professional goals, I'll also share insights and tips on personal
+        development and career growth.</li> </ul><br>
+    <div class="indent1">
+        <strong>Why This Blog?</strong><br>
+        <br>
+    This blog is more than just a diary; it's a platform to connect, inspire, and make a difference. I believe in the
+    power of community and the importance of giving back. Through this space, I hope to reach out to like-minded
+    individuals, share knowledge, and foster a supportive network.
+    <br><br>
+    <em><u>Join Me</u></em><br>
+
+    I invite you to join me on this journey. Together, we can explore new ideas, support each other, and make a positive
+    impact in our communities. Thank you for visiting, and I look forward to sharing this exciting adventure with you!
+    </div>
+    
+    </p>
+
 </body>
 
 </html>
