--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
   <body>
+    <nav class="navbar bg-light">
     <header>
-      <h1>Welcome to Mr. Dee's Corner of the Internet!</h1>
-     
+      <h1>Andrew Dalye Jr. 2024 Online Curriculum Vitae</h1>
     </header>
+    </nav>
     <main class="container">
       <nav>
         <ul class="tabs">
