--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
   <body>
-    <nav class="navbar fixed-top text-bg-primary">
+    <nav class="navbar fixed-top bg-primary text-light">
     <header>
       <h1>Andrew Dalye Jr. 2024 Online Curriculum Vitae</h1>
     </header>
