--- a/index.html
+++ b/index.html
@@ -15,9 +15,22 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md bg-dark">
-    <header>
       <h1>Andrew Dalye Jr. 2024 Online Curriculum Vitae</h1>
-    </header>
+      <div class="container">
+        <a href="#" class="navbar-brand">
+          <button
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            class="navbar-toggler"
+            >
+            <span class="navbar-toggler-icon">
+              
+            </span>
+          </button>
+          
+        </a>
+      </div>
     </nav>
     <main class="container">
       <nav>
