--- a/index.html
+++ b/index.html
@@ -3,82 +3,81 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Mr.Dee's Blog Site</title>
-    <link rel="stylesheet" href="main.css" />
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <title>HOME | 675Mr.DEE</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="bootstrap/css/font-awesome.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md bg-dark">
-      <h1>Andrew Dalye Jr. 2024 Online Curriculum Vitae</h1>
+    <nav
+      class="navbar navbar-expand-md bg-dark fixed-top navbar-dark bg-gradient"
+    >
       <div class="container">
-        <a href="#" class="navbar-brand">
-          <button
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            class="navbar-toggler"
-            >
-            <span class="navbar-toggler-icon">
-              
-            </span>
-          </button>
-          
-        </a>
+        <a href="#" class="navbar-brand">&nbsp⚜️ 675Mr.DEE &copy 2024 | HOME</a>
+        <button
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          class="navbar-toggler p-1 m-2"
+        >
+          <span
+            class="navbar-toggler-icon"
+            style="width: 20px !important; height: 20px !important"
+          ></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto gap-1" style="text-shadow: 1px 2px 3px black">
+            <li class="nav-item bg-light">
+              <a data-tab-target="#cv-resume-content" class="nav-link active"
+                >Blog</a
+              >
+            </li>
+            <li class="nav-item bg-light">
+              <a
+                data-tab-target="#companies-organization-content"
+                class="nav-link"
+                >Website Designs</a
+              >
+            </li>
+            <li class="nav-item bg-light">
+              <a data-tab-target="#project-proposals-content" class="nav-link">
+              Environmental Chemistry</a>
+            </li>
+            <li class="nav-item bg-light">
+              <a data-tab-target="#sales-advertisement-content" class="nav-link"
+                >High School Mathematics</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
-    <main class="container">
-      <nav>
-        <ul class="tabs">
-          <li><a href="#home" class="tab active">HOME</a></li>
-          <li><a href="#hobbies" class="tab">HOBBIES</a></li>
-          <li><a href="#interests" class="tab">INTERESTS</a></li>
-          <li><a href="#projects" class="tab">PROJECTS</a></li>
-        </ul>
-      </nav>
-      <article id="home">
-        <h2>Home Page Content</h2>
-        <p>
-          Web development is a constantly evolving field that combines
-          creativity with technical skills. In this post, we'll explore the
-          fundamentals of HTML, CSS, and JavaScript, and how they work together
-          to create stunning websites.
-        </p>
-      </article>
+    <!-- spacer ... blo separatim body wantem navbar -->
+    <div class="container mt-5 mb-3">&nbsp</div>
 
-      <article id="hobbies">
-        <h2>Hobbies Page Content</h2>
-        <p>
-          CSS layouts can be tricky, but with the right techniques, you can
-          create responsive and beautiful designs. We'll dive into flexbox,
-          grid, and other modern CSS layout methods to help you build
-          professional-looking websites.
-        </p>
-      </article>
+    <!-- spacer ... blo separatim body wantem lek -->
+    <div style="margin-top: 150px"></div>
+    <!-- footer -->
+    <div
+      class="container fixed-bottom text-bg-dark bg-gradient p-3 fw-lighter h6 d-flex justify-content-center"
+      id="footer"
+    >
+      Website by:
+      <a href="mailto:675mrdee@gmail.com">675Mr.DEE &copy 2024</a> &nbsp|&nbsp
+      Ph: (+675) 73 507 811
+    </div>
 
-      <article id="interests">
-        <h2>Interests Page Content</h2>
-        <p>
-          JavaScript is the powerhouse behind interactive web experiences. In
-          this comprehensive guide, we'll cover everything from basic syntax to
-          advanced concepts like asynchronous programming and DOM manipulation.
-        </p>
-      </article>
-
-      <article id="projects">
-        <h2>Projects Page Content</h2>
-        <p>
-          In today's multi-device world, responsive design is more important
-          than ever. Learn how to create websites that look great on everything
-          from smartphones to large desktop monitors.
-        </p>
-      </article>
-    </main>
-    <script src="main.js"></script>
+    <script src="tex-mml-chtml.js"></script>
+    <script src="jquery.js"></script>
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script>
+      const tooltipTriggerList = document.querySelectorAll(
+        '[data-bs-toggle="tooltip"]'
+      );
+      const tooltipList = [...tooltipTriggerList].map(
+        (tooltipTriggerEl) => new bootstrap.Tooltip(tooltipTriggerEl)
+      );
+    </script>
   </body>
 </html>
