--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME | 675Mr.DEE</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css?v=1.001" />
     <link rel="stylesheet" href="bootstrap/css/font-awesome.css" />
-    <script src="script.js" defer></script>
+    <script src="script.js?v=1.001" defer></script>
   </head>
   <body>
     <nav
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto gap-1" style="text-shadow: 1px 2px 3px black">
             <li class="nav-item bg-light">
-              <a data-tab-target="#cv-resume-content" class="nav-link active"
+              <a data-tab-target="#cv-resume-content" class="nav-link"
                 >Blog</a
               >
             </li>
