--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <nav
       class="navbar navbar-expand-md bg-dark fixed-top navbar-dark bg-gradient"
+      id="refreshButton"
     >
       <div class="container">
         <a href="#" class="navbar-brand">&nbsp⚜️ 675Mr.DEE &copy | HOME</a>
@@ -27,11 +28,12 @@
           ></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto gap-1" style="text-shadow: 1px 2px 3px black">
+          <ul
+            class="navbar-nav ms-auto gap-1"
+            style="text-shadow: 1px 2px 3px black"
+          >
             <li class="nav-item bg-light">
-              <a data-tab-target="#cv-resume-content" class="nav-link"
-                >Blog</a
-              >
+              <a data-tab-target="#blog-container" class="nav-link">Blog</a>
             </li>
             <li class="nav-item bg-light">
               <a
@@ -42,7 +44,8 @@
             </li>
             <li class="nav-item bg-light">
               <a data-tab-target="#project-proposals-content" class="nav-link">
-              Environmental Chemistry</a>
+                Environmental Chemistry</a
+              >
             </li>
             <li class="nav-item bg-light">
               <a data-tab-target="#sales-advertisement-content" class="nav-link"
@@ -53,9 +56,57 @@
         </div>
       </div>
     </nav>
-    <!-- spacer ... blo separatim body wantem navbar -->
+    <!-- spacer ... blo separatim body content wantem navbar -->
     <div class="container mt-5 mb-3">&nbsp</div>
-
+    <!-- body content -->
+    <!-- blog container -->
+    <div
+      class="container bg-special-001 p-3 ms-sm-5 me-sm-5 active"
+      id="blog-container"
+      data-tab-content
+    >
+      <strong> Wednesday, September 11<sup>th</sup>, 2024</strong>
+      <br /><br />
+      <p style="color: darkslategrey">
+        Seven days before my 36<sup>th</sup>birthday and I am still learning to
+        code...
+        <br /><br />
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aut
+        nobis repudiandae beatae corporis deleniti quis, soluta ipsam excepturi
+        dignissimos voluptatem quia tenetur recusandae quasi ab molestias
+        maiores? Ab, aliquam? Temporibus aliquam laudantium, labore dolores
+        cupiditate culpa assumenda! Dolorem cumque officia repudiandae neque a
+        omnis eveniet quo eum magni, asperiores veniam sapiente sequi.
+        Reiciendis aliquam, sequi blanditiis nam veritatis beatae. Error nemo
+        distinctio eveniet sint dolore qui vitae illum! Incidunt aperiam
+        praesentium quia et ut iste ab libero similique quisquam animi sapiente
+        odit voluptatem commodi nobis veniam odio, perferendis quibusdam.
+        Adipisci quae pariatur asperiores nemo omnis, totam magni odit ducimus
+        repellat libero, illum perspiciatis eligendi dolor error reprehenderit
+        cumque ab nihil ut! Harum atque autem perferendis amet, nostrum quos
+        hic. Exercitationem placeat cupiditate quam facilis vel dicta nemo iusto
+        accusantium, eveniet repellat delectus sunt illum saepe mollitia.
+        Sapiente expedita modi praesentium ipsum dolorem assumenda ab? Nostrum
+        dolorem dolorum vel rerum. Est ipsam nulla dignissimos deleniti dolorem
+        ea suscipit libero, assumenda quibusdam, atque magnam odit voluptate
+        expedita, id facilis inventore tempora dolores omnis! Dolorem enim
+        consectetur nam blanditiis. Facere, impedit repudiandae. Rerum assumenda
+        velit saepe. Non architecto similique nobis ea magnam cupiditate
+        quibusdam ratione veniam laboriosam animi! Nihil, temporibus totam nisi
+        nemo, expedita beatae ullam fuga dolores eos enim veniam architecto?
+        Ratione accusantium cumque eos molestiae. Neque, corrupti numquam?
+        Perspiciatis ullam temporibus illum! Ratione dignissimos tempore ex
+        atque ullam nostrum, a libero inventore aspernatur, quidem repudiandae
+        minus eaque cumque. Sunt, veniam! Qui sed labore vel quisquam iusto
+        quos, distinctio doloremque asperiores quibusdam eligendi sint eum
+        fugiat, vitae eaque perferendis adipisci saepe similique ducimus
+        dignissimos animi ullam earum! Possimus quos voluptates dicta. Earum
+        exercitationem ut dolores fugiat explicabo enim consequuntur quas omnis
+        aspernatur maxime corporis similique placeat inventore excepturi maiores
+        repellat doloribus eligendi autem quibusdam ratione, architecto at? Ea
+        mollitia minus nulla.
+      </p>
+    </div>
     <!-- spacer ... blo separatim body wantem lek -->
     <div style="margin-top: 150px"></div>
     <!-- footer -->
