Home page update
Website will be completed before Christmas 2024

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
       <strong> Wednesday, September 11<sup>th</sup>, 2024</strong>
       <br /><br />
       <p style="color: darkslategrey">
-        Seven days before my 36<sup>th</sup>birthday and I am still learning to
-        code...
+        This website will be completed anytime before Christmas 2024...
         <br /><br />
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita aut
         nobis repudiandae beatae corporis deleniti quis, soluta ipsam excepturi
