--- a/cv-001/index.html
+++ b/cv-001/index.html
@@ -69,15 +69,14 @@
                 </div>
                 <div class="col-8 col-md-10">
                   <i>
-                    I am a 36 year old male from Jiwaka who grew up in Lae. I
-                    was raised in a Christian family who are devout Evangelical
-                    Brotherhood Church Christians.<br /><br />
-                    I am a born-again Christian, from the year 2011 I have tried
-                    the best I can to be faithful although I am not perfect. My
-                    favorite Bible verse is Psalm 23 - I utter it in NKJV
-                    translation by hart.<br /><br />
-                    I am soft spoken and I love coding. I also love playing the
-                    guitar and meeting up with fellow Christians.
+                    I am a 36-year-old male from Jiwaka, raised in Lae. Growing
+                    up in a devout Evangelical Brotherhood Church family, I have
+                    been a committed Christian since 2011. While I strive to
+                    live faithfully, I embrace continuous growth. My favorite
+                    Bible passage is Psalm 23, which I know by heart in the NKJV
+                    translation. I am soft-spoken and have a deep passion for
+                    coding. I also enjoy playing the guitar and connecting with
+                    others in fellowship.
                   </i>
                 </div>
               </div>
@@ -87,40 +86,26 @@
                 <div class="text-primary col-4 col-md-2">Skills Overview:</div>
                 <div class="col-8 col-md-10">
                   <i>
-                    I am able to code simple programs in Javascript, Python,
-                    Bash Script, SQL and PHP. I am still learning, still chasing
-                    my dream of becoming an expert someday in vanilla Javascript
-                    + Typescript (Developers/Programmers will know). Do visit my
-                    coding projects website to view some of my projects.<br /><br />
-                    I am able to teach or train. I have taught in three high
-                    schools and also have experience in facilitating trainings
-                    for stakeholders as a WASH Project officer before.<br /><br />
-                    I have experience teaching in a remote area. I have taught
-                    at Karamui High School for six weeks without proper teaching
-                    materials and facilities. I therefore understand the needs,
-                    I am familiar with improvisation, I have the tools and I
-                    possess the right skills to operate in a remote setting.
-                    <br /><br />
-                    I am confident in myself as a teacher/ trainer who is able
-                    to maneuver and perform under minimal or no supervision at
-                    all. Whether it be a classroom setting or a mine site, I
-                    have great confidence that I am equipped enough to deliver
-                    proper and high quality training/ teaching.
-                    <br /><br />
-                    I am able to carry out some Environmental Chemistry work/
-                    Laboratory Analyses, although I may need some training and
-                    supervision. Please do scope out my Chemistry skills and
-                    content knowledge from my Environmental Chemistry webpage
-                    where I keep my Chemistry knowledge alive and showcase my
-                    ability and passion for the subject.
-                    <br /><br />
-                    I can lead teamwork. I have experience and training in
-                    leadership roles as can be perused below in this document.
-                    Moreover, I know that I possess excellent work attitude and
-                    character which distinguishes me as the best candidate for
-                    this, and any other job(s) that come my way. I believe in
-                    hard work, commitment, dedication, perseverance and trust in
-                    God always.
+                    I have proficiency in JavaScript, Python, Bash scripting,
+                    SQL, and PHP, with ongoing development in mastering vanilla
+                    JavaScript and TypeScript. You can view some of my coding
+                    projects on my portfolio website. In addition to technical
+                    skills, I am an experienced educator, having taught at three
+                    high schools. I also facilitated stakeholder training
+                    sessions as a WASH Project Officer. I have taught in
+                    challenging, resource-limited environments, such as Karamui
+                    High School, where I successfully adapted to the needs of
+                    the students. This experience has equipped me with the
+                    ability to teach and train effectively, even in remote
+                    settings, and perform under minimal supervision. I also
+                    possess foundational skills in Environmental Chemistry and
+                    Laboratory Analysis, and I am eager to expand this knowledge
+                    with further training. Beyond technical and teaching
+                    abilities, I have strong leadership and teamwork skills,
+                    honed through both professional experience and dedicated
+                    training. I am confident that my work ethic, dedication, and
+                    leadership qualities make me a strong candidate for various
+                    roles.
                   </i>
                 </div>
               </div>
@@ -130,11 +115,13 @@
                 <div class="text-primary col-4 col-md-2">Career Overview:</div>
                 <div class="col-8 col-md-10">
                   <i>
-                    I constantly unlearn and re-learn things. Therefore, I am
-                    able enough to take on any new career path whatever God calls
-                    me to do. Do visit my website where I explore and exhibit
-                    some of the things I have taken interest in and shared with
-                    the world.
+                    I am committed to continuous learning, unlearning, and
+                    relearning. This adaptability allows me to take on new
+                    career paths with confidence and dedication. I am open to
+                    opportunities where I can grow and contribute to any field
+                    that aligns with my skills and values. You can explore my
+                    website for insights into the various interests I’ve pursued
+                    and the projects I’ve shared with the world.
                   </i>
                 </div>
               </div>
@@ -200,7 +187,7 @@
                 <div class="row bg-lemonchiffon m-0">
                   <div class="text-primary col-4 col-md-2">Marital status:</div>
                   <div class="col-8 col-md-10">
-                    <i>Single (never married)</i>
+                    <i>Single</i>
                   </div>
                 </div>
                 <!-- Address -->
@@ -261,23 +248,14 @@
                   <div class="col-8 col-md-10">
                     <i>List of Personal Goals:</i>
                     <br /><br />
-                    <ul>
-                      <li>
-                        Personally I have one goal only. It is to God's will.
-                      </li>
-                    </ul>
-
-                    Whenever I look around me, and if there is something which I
-                    can do that needs doing and if the resources required to do
-                    the job are available and within my reach or discretion,
-                    then I take it upon myself that God has placed me there at
-                    that moment for that work. That is my philosophy and
-                    although I do not know if it is the correct one to go by, it
-                    feels right to me everytime I engage in doing something
-                    right for God's glory.
-                    <br /><br />
-                    I try not to circumvent from God's purpose nor allow time
-                    for vain pursuits as much I can.
+                    My primary goal is to fulfill God's will. Whenever I
+                    encounter a task that needs attention and have the necessary
+                    resources available, I believe it's my responsibility to
+                    take action, trusting that I am placed in that moment for a
+                    purpose. This guiding philosophy helps me focus on doing
+                    what is right and meaningful. I strive to avoid distractions
+                    and remain dedicated to pursuing God's purpose in everything
+                    I do.
                   </div>
                 </div>
                 <div class="row m-0 mt-3">
@@ -289,19 +267,16 @@
                     <br /><br />
                     <ul>
                       <li>
-                        Honing my coding skills with some simple coding projects
+                        Improve my coding skills through practical projects
                       </li>
-                      <li>Sending out applications for formal employment</li>
+                      <li>Actively apply for formal employment opportunities</li>
                     </ul>
-                    Being unemployed this year 2024, has given me opportunity to
-                    unlearn and re-learn. I want to be better at my Chemistry
-                    and Coding skills because I have to be really prepared for
-                    my next formal employment.
-                    <br /><br />
-                    Whilst taking online courses, I am also sending out
-                    applications for formal employment. By doing these two
-                    things, I know that I am focused and in line with my goal.
-                    Everything has its season (~ Ecclesiastes 3).
+                    Being unemployed in 2024 has given me time to enhance my skills in both
+                    Chemistry and Coding. I am preparing for my next formal
+                    employment by balancing online courses with sending out job
+                    applications. In doing so, I remain focused and aligned with
+                    my goals. As Ecclesiastes 3 reminds us, everything has its
+                    season.
 
                     <!--     <br /><br />
                     Whilst awaiting pending application interviews for formal employment,
@@ -385,7 +360,9 @@
           >
             <div class="accordion-body">
               <div class="row mb-3 mt-3 border p-1">
-                <div class="text-primary col-4 col-md-2"><!-- ISO Certificate: --></div>
+                <div class="text-primary col-4 col-md-2">
+                  <!-- ISO Certificate: -->
+                </div>
                 <div class="col-8 col-md-10"><i>Alison.com</i></div>
               </div>
             </div>
