--- a/cv-001/index.html
+++ b/cv-001/index.html
@@ -269,14 +269,16 @@
                       <li>
                         Improve my coding skills through practical projects
                       </li>
-                      <li>Actively apply for formal employment opportunities</li>
+                      <li>
+                        Actively apply for formal employment opportunities
+                      </li>
                     </ul>
-                    Being unemployed in 2024 has given me time to enhance my skills in both
-                    Chemistry and Coding. I am preparing for my next formal
-                    employment by balancing online courses with sending out job
-                    applications. In doing so, I remain focused and aligned with
-                    my goals. As Ecclesiastes 3 reminds us, everything has its
-                    season.
+                    Being unemployed in 2024 has given me time to enhance my
+                    skills in both Chemistry and Coding. I am preparing for my
+                    next formal employment by balancing online courses with
+                    sending out job applications. In doing so, I remain focused
+                    and aligned with my goals. As Ecclesiastes 3 reminds us,
+                    everything has its season.
 
                     <!--     <br /><br />
                     Whilst awaiting pending application interviews for formal employment,
@@ -850,10 +852,17 @@
                   <i>
                     <ul class="pt-3 pb-3">
                       <u>Project Brief:</u>
-                      <li>Around K1.2 million project</li>
-                      <li>1 year project, 2018</li>
                       <li>
-                        Pilot Project (never been done before in the country)
+                        Around K1.2 million project (but the whole sum was not
+                        used because the project was shut down)
+                      </li>
+                      <li>
+                        1 year project, 2018 (but project was shut down after
+                        seven months)
+                      </li>
+                      <li>
+                        Pilot Project (first trial for WASH-in-Schools in the
+                        country)
                       </li>
                       <li>
                         Covered six primary schools in NCD, Boreboa Primary, St.
@@ -911,18 +920,24 @@
                         I was fully engaged in the project for one year only
                         (2014), and then helped occasionally in the following
                         years. Although, some might deem this as not something
-                        worth mentioning on a CV, I put it here because the
-                        valuable lessons I learnt from participating in the
+                        worth mentioning on a CV, I put it here because some of
+                        the valuable lessons I learnt from participating in the
                         project are worth more than any school or university
-                        could ever teach me.
+                        could ever teach me. I learnt diligence, patience and
+                        perseverance. Together with my fellow construction
+                        mates, we were able to maneuver and overcome odds like,
+                        improvising our own tools and materials for work. This
+                        project sparked creative and outside the box thinking
+                        and activity. <br /><br/>
+                        Therefore, on that not, I would like to state that as a
+                        teacher, I have found from my own experience in this
+                        project that hands-on work is also important and very
+                        vital for student learning. It is a must-do for all subjects,
+                        whether it be Mathematics, History or Personal Development, etc.,.
                         <br /><br />
                         The project ignited my passion for construction work and
                         brought out a flair I tought I never had. Since then I
-                        have engaged in many other construction projects and I
-                        am now on my way to gathering enough capital to start my
-                        own construction company. Therefore, this project was a
-                        huge inspiration and plays a big part in shaping my
-                        career interests.
+                        have engaged in many other construction projects.
                       </li>
                     </ul>
                   </i>
