--- a/cv-001/index.html
+++ b/cv-001/index.html
@@ -884,8 +884,7 @@
                         Having learnt from our mistakes in this project I am in
                         a better position to ensure no such mistakes will be
                         made in future projects that I am engaged in. Our
-                        mistakes might have been a loss to Anglicare PNG Inc.,
-                        but were a stepping stone for each and everyone of us
+                        mistakes were a stepping stone for each and everyone of us
                         who were engaged in that pilot project.
                       </li>
                     </ul>
@@ -929,9 +928,9 @@
                         improvising our own tools and materials for work. This
                         project sparked creative and outside the box thinking
                         and activity. <br /><br/>
-                        Therefore, on that not, I would like to state that as a
+                        Therefore, on that note, I would like to state that as a
                         teacher, I have found from my own experience in this
-                        project that hands-on work is also important and very
+                        project that outdoor hands-on work is also important and very
                         vital for student learning. It is a must-do for all subjects,
                         whether it be Mathematics, History or Personal Development, etc.,.
                         <br /><br />
