Updated index.html file

--- a/cv-001/index.html
+++ b/cv-001/index.html
@@ -72,12 +72,7 @@
                 </div>
                 <div class="col-8 col-md-10">
                   <i>
-                    I am a 36-year-old male from Jiwaka, raised in Lae. Growing
-                    up in a devout Evangelical Brotherhood Church family, I have
-                    been a committed Christian since 2011. While I strive to
-                    live faithfully, I embrace continuous growth. My favorite
-                    Bible passage is Psalm 23, which I know by heart in the NKJV
-                    translation. I am soft-spoken and have a deep passion for
+                    I am a graduate chemist and have a deep passion for
                     coding. I also enjoy playing the guitar and connecting with
                     others in fellowship.
                   </i>
@@ -89,10 +84,7 @@
                 <div class="text-primary col-4 col-md-2">Skills Overview:</div>
                 <div class="col-8 col-md-10">
                   <i>
-                    I have proficiency in JavaScript, Python, Bash scripting,
-                    SQL, and PHP, with ongoing development in mastering vanilla
-                    JavaScript and TypeScript. You can view some of my coding
-                    projects on my portfolio website. In addition to technical
+                    In addition to technical
                     skills, I am an experienced educator, having taught at three
                     high schools. I also facilitated stakeholder training
                     sessions as a WASH Project Officer. I have taught in
