--- a/cv-001/index.html
+++ b/cv-001/index.html
@@ -923,11 +923,7 @@
                         improvising our own tools and materials for work. This
                         project sparked creative and outside the box thinking
                         and activity. <br /><br/>
-                        Therefore, on that note, I would like to state that as a
-                        teacher, I have found from my own experience in this
-                        project that outdoor hands-on work is also important and very
-                        vital for student learning. It is a must-do for all subjects,
-                        whether it be Mathematics, History or Personal Development, etc.,.
+                        As a teacher, I can firmly state with conviction from my experience in this project that outdoor hands-on work is also important and vital for student learning. Like coding, the learning syntax for applying theoretical knowledge to solving real-world problems is consolidated through hands-on work like that. It is a must-do for all subjects, whether it be Mathematics, History or Personal Development, etc.,.
                         <br /><br />
                         The project ignited my passion for construction work and
                         brought out a flair I tought I never had. Since then I
