Updated index.html file

--- a/cv-001/index.html
+++ b/cv-001/index.html
@@ -927,7 +927,7 @@
                         <br /><br />
                         The project ignited my passion for construction work and
                         brought out a flair I tought I never had. Since then I
-                        have engaged in many other construction projects.
+                        have engaged in many other construction projects, some of which are listed above in this document.
                       </li>
                     </ul>
                   </i>
